<?xml version="1.0" encoding="utf-8"?>
<layout>
  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/splash_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/medium_padding">

    <ImageView
      android:id="@+id/icon_image"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:contentDescription="@string/icon"
      android:src="@drawable/ic_icon"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <ImageView
      android:id="@+id/udacity_lgo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/tiny_margin"
      android:src="@drawable/ic_udacity"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/powered_by" />

    <TextView
      android:id="@+id/powered_by"
      style="@style/title"
      android:layout_marginTop="@dimen/big_margin"
      android:fontFamily="@font/montserrat"
      android:text="@string/powered_by"
      android:textSize="@dimen/small_font"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/app_name" />

    <TextView
      android:id="@+id/app_name"
      style="@style/title"
      android:layout_marginTop="@dimen/small_margin"
      android:text="@string/shoe_store_inventory"
      android:textSize="@dimen/medium_font"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/icon_image" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
